# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  14 May 2008; Andrew Gaffney <agaffney@gentoo.org> arch/arm.py:
  Add armv5tel to arm host list

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  If we don't have a distcc user, we need to reinstall distcc, even if it's
  been built with the right USE. This mainly affects stage1/stage2.

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  We need to run distcc-config --install, since we won't be installing into
  ROOT=/ for stage1, and we have to use --noreplace to keep from wiping any
  installed versions of distcc.

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org> TODO:
  Add a couple of distcc-related items to TODO.

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/stage4/stage4-preclean-chroot.sh:
  We don't want to run setup_myfeatures in preclean, but still want to update
  the environment and show our debug information.

  25 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/stage4/stage4-preclean-chroot.sh,
  targets/support/chroot-functions.sh:
  Remove the die on LIBDIR check, since it won't be set on non-multilib
  profiles. We can now run debug in preclean again.

  25 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh:
  Let's not try to chmod a dangling symlink.

  25 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Added emerge --info to debug output.  I don't know why I didn't add it before.

  25 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean-chroot.sh,